# speculare-alerts

./: CHANGELOG.md  Cargo.toml  README.md  alerts.example.config  release-please-config.json
.github/workflows/: upload-to-release.yaml
src/: check.rs  flow_check.rs  flow_run.rs  main.rs  sp_alerts.rs
src/monitoring/: alerts.rs  analysis.rs  mod.rs  monitor.rs  query.rs
src/notifications/: mail.rs
src/utils/: alerts.rs  analysis.rs  config.rs  impls.rs  mod.rs  monitor.rs  monitoring.rs  query.rs  websocket.rs  ws_alerts.rs  ws_hosts.rs  ws_utils.rs
src/utils/notifications/: mail.rs
src/utils/qtype/: mod.rs
src/websockets/: mod.rs  ws_handler.rs  ws_message.rs
templates/: escalate.html  escalate.stpl  incident.html  incident.stpl  resolved.html  resolved.stpl
