[package]
name = "speculare-alerts"
version = "0.0.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sproot = { git = "https://github.com/speculare-cloud/sproot" }
base64 = "0.13"
bastion = "0.4"
bastion-executor = { version = "0.4", features = ["tokio-runtime"] }
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["toml"] }
pest = "=2.5.6"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
evalexpr = "8.1"
futures = "0.3"
futures-util = "0.3"
http = "0.2"
lettre = { version = "0.10", features = ["rustls-tls"] }
log = "0.4"
once_cell = "1.14"
rand = "0.8"
regex = "1.6"
r2d2 = "0.8"
sailfish = "0.4"
serde = { version = "1.0", features = ["derive"] }
simd-json = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1